--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
 		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"@tailwindcss/line-clamp": "^0.4.2",
+		"@tailwindcss/typography": "^0.5.9",
+		"autoprefixer": "^10.4.13",
+		"daisyui": "^2.46.1",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.4"
 	},
 	"type": "module"
 }
