--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"unplugin-icons": "^0.15.1",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"zod": "^3.20.2"
 	},
 	"type": "module"
 }
