--- a/package.json
+++ b/package.json
@@ -3,43 +3,66 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "doppler run -- vite dev --open",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"prisma:studio": "doppler run -- prisma studio",
+		"prisma:push": "doppler run -- prisma db push",
+		"prisma:reset": "doppler run -- prisma db push --force-reset && prisma db seed"
 	},
 	"devDependencies": {
+		"@auth/core": "^0.2.5",
+		"@auth/sveltekit": "^0.1.12",
+		"@felte/validator-zod": "^1.0.13",
 		"@iconify/json": "^2.2.6",
 		"@playwright/test": "^1.28.1",
+		"@popperjs/core": "^2.11.6",
+		"@prisma/client": "4.5.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/bcrypt": "^5.0.0",
+		"@types/luxon": "^3.2.0",
+		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@zerodevx/svelte-toast": "1.0.0-rc.1",
 		"autoprefixer": "^10.4.13",
 		"class-variance-authority": "^0.4.0",
 		"daisyui": "^2.46.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"felte": "^1.2.7",
+		"luxon": "^3.2.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "4.5.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
+		"svelte-popperjs": "^1.3.2",
 		"tailwindcss": "^3.2.4",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"unplugin-icons": "^0.15.1",
 		"vite": "^4.0.0",
 		"zod": "^3.20.2"
 	},
-	"type": "module"
+	"type": "module",
+	"prisma": {
+		"seed": "doppler run -- node --experimental-specifier-resolution=node --loader ts-node/esm prisma/seed.ts"
+	},
+	"dependencies": {
+		"bcrypt": "^5.1.0"
+	}
 }
