--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "doppler run -- vite dev --open",
-		"build": "vite build",
-		"preview": "vite preview",
+		"build": "doppler run -- vite build",
+		"preview": "doppler run -- vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -26,6 +26,7 @@
 		"@prisma/client": "4.5.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.4",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
