--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"editor.formatOnSave": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	},
 	"i18n-ally.localesPaths": ["src/lib/i18n/locales"],
 	"i18n-ally.keystyle": "nested",
 	"typescript.tsdk": "node_modules\\typescript\\lib"
