--- a/.eslintignore
+++ b/.eslintignore
@@ -6,6 +6,8 @@ node_modules
 .env
 .env.*
 !.env.example
+.vercel/*
+/src/lib/i18n/locales/**/*.json
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
