--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
+		"format:staged": "prettier --plugin-search-dir . --write",
 		"prisma:studio": "doppler run -- prisma studio",
 		"prisma:push": "doppler run -- prisma db push",
 		"prisma:reset": "doppler run -- prisma db push --force-reset && prisma db seed",
-		"prepare": "prisma generate"
+		"prepare": "husky install && prisma generate"
 	},
 	"devDependencies": {
 		"@auth/core": "^0.2.5",
@@ -45,6 +46,8 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"felte": "^1.2.7",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.0",
 		"luxon": "^3.2.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
@@ -69,5 +72,8 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0"
+	},
+	"lint-staged": {
+		"*.{svelte,ts,html,css,json}": "pnpm run format:staged"
 	}
 }
