--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prisma": "4.5.0",
+		"sib-api-v3-sdk": "^8.5.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
