tests: 🧪 add playwright tests (#26)
* test: 🧪 add testids

* test: ✅ add tests for cookie banner and theme and language switch

* test: 🧪 add signin test

* test: 🧪 add signup and account delete tests

* test: 🧪 add e2e folder

* test: 🧪 validating email with mailinator

* test: ✅ reset password test

* test: 🧪 add global setup to test with logged in user

* fix: 🩹 inconsistent results

* test: ✅ update password

* fix: 🩹 test inconsistencies

* test: ✅ update profile

* test: 🧪 add logged out codegen

* chore: 🔨 add engines to package.json

* test: 🧪 add timestamp to test email

* ci: 👷 configure ci

* ci: 👷 update test script

* ci: 👷 fix playwright

* ci: 👷 add env secrets

* refactor: ♻️ remove automatic country code detection

* ci: 👷 cache playwright

* fix: 🩹 add while loop until email arrives

* test: 🧪 more timeout

* fix: 🩹 mailinator logic

* fix: 🩹 caching playwright

* fix: 🩹 replace ^

* what

* ci: 👷 use sharding for tests

* ci: 👷 fix shards

* ci: 👷 remove comment

* test: 🧪 fix update afterAll test

* chore: 🔧 format workflow

* fix: 🩹 flags path

* fix: 🩹 update password test

* fix: 🩹 close toast

* ci: 👷 reduce test shards

* ci: 👷 cancel previous runs

* ci: 👷 fix var

* fix: 🐛 add separate user to test password change

* fix: 🩹 remove only

* fix: 🐛 waits one second before opening mailinator

* try fix mailinator

* test: 🧪 separate test cases in various accounts

* ci: 👷 add local mysql instance

* fix: 🩹 update db name

* ci: 👷 prisma ci

* fix: 🐛 update seed script

* fix: 🐛 svelte kit sync

* remove only

* feat: ✨ add docker compose to run database locally

* fix: 🩹 add docker-compose down

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 AUTH_SECRET=
 DATABASE_URL=
-SMTP_CONNECTION=
 GOOGLE_WEB_CLIENT_ID=
 GOOGLE_WEB_CLIENT_SECRET=
 SENDINBLUE_API_KEY=
+DOPPLER_ENVIRONMENT=
