--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/luxon": "^3.2.0",
 		"@types/node": "^18.11.18",
+		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
@@ -59,6 +60,7 @@
 		"husky": "^8.0.3",
 		"lint-staged": "^13.1.0",
 		"luxon": "^3.2.1",
+		"nprogress": "^0.2.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -82,7 +84,8 @@
 		"seed": "prisma/seed.sh"
 	},
 	"dependencies": {
-		"bcrypt": "^5.1.0"
+		"bcrypt": "^5.1.0",
+		"date-fns": "^2.29.3"
 	},
 	"lint-staged": {
 		"*.{svelte,ts,html,css,json}": "pnpm run format:staged"
