--- a/package.json
+++ b/package.json
@@ -31,55 +31,59 @@
 		"@auth/core": "^0.2.5",
 		"@auth/sveltekit": "^0.1.12",
 		"@felte/validator-zod": "^1.0.13",
-		"@iconify/json": "^2.2.6",
+		"@iconify/json": "^2.2.25",
 		"@openapitools/openapi-generator-cli": "^2.5.2",
-		"@playwright/test": "^1.28.1",
+		"@playwright/test": "^1.31.0",
 		"@popperjs/core": "^2.11.6",
 		"@prisma/client": "4.5.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-vercel": "^1.0.4",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^1.0.3",
+		"@sveltejs/adapter-node": "^1.2.0",
+		"@sveltejs/adapter-vercel": "^1.0.6",
+		"@sveltejs/kit": "1.0.11",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
-		"@trpc/client": "^10.9.0",
-		"@trpc/server": "^10.9.0",
+		"@trpc/client": "^10.12.0",
+		"@trpc/server": "^10.12.0",
 		"@types/bcrypt": "^5.0.0",
 		"@types/luxon": "^3.2.0",
-		"@types/node": "^18.11.18",
+		"@types/node": "^18.14.0",
 		"@types/nprogress": "^0.2.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@types/ws": "^8.5.4",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
 		"autoprefixer": "^10.4.13",
 		"class-variance-authority": "^0.4.0",
-		"daisyui": "^2.46.1",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"daisyui": "^2.50.2",
+		"eslint": "^8.34.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"felte": "^1.2.7",
 		"husky": "^8.0.3",
-		"lint-staged": "^13.1.0",
+		"lint-staged": "^13.1.2",
 		"luxon": "^3.2.1",
 		"nprogress": "^0.2.0",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"prettier": "^2.8.4",
+		"prettier-plugin-svelte": "^2.9.0",
 		"prisma": "4.5.0",
 		"rollup-plugin-visualizer": "^5.9.0",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
+		"svelte": "^3.55.1",
+		"svelte-check": "^2.10.3",
 		"svelte-i18n": "^3.6.0",
+		"svelte-infinite-loading": "^1.3.8",
 		"svelte-popperjs": "^1.3.2",
-		"svelte-tel-input": "^1.1.2",
-		"tailwindcss": "^3.2.4",
-		"trpc-sveltekit": "^3.2.4",
+		"svelte-tel-input": "^1.2.0",
+		"tailwindcss": "^3.2.7",
+		"trpc-sveltekit": "^3.4.2",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"unplugin-icons": "^0.15.1",
-		"vite": "^4.0.0",
-		"zod": "^3.20.2"
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"unplugin-icons": "^0.15.3",
+		"vite": "^4.1.4",
+		"ws": "^8.12.1",
+		"zod": "^3.20.6"
 	},
 	"type": "module",
 	"prisma": {
