--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
 		"svelte": "^3.55.1",
 		"svelte-check": "^2.10.3",
 		"svelte-i18n": "^3.6.0",
-		"svelte-infinite-loading": "^1.3.8",
+		"svelte-inview": "^3.0.4",
 		"svelte-popperjs": "^1.3.2",
 		"svelte-tel-input": "^1.2.0",
 		"tailwindcss": "^3.2.7",
