refactor: ♻️ enrollments and activity dates (#66)
enrollments must happen before activity start

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,11 @@
 	"i18n-ally.localesPaths": ["src/lib/i18n/locales"],
 	"i18n-ally.keystyle": "nested",
 	"typescript.tsdk": "node_modules\\typescript\\lib",
-	"exportall.config.folderListener": ["/src/lib/schemas", "/src/lib/trpc/routers"]
+	"exportall.config.folderListener": ["/src/lib/schemas", "/src/lib/trpc/routers"],
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/*.code-search": true,
+		"**/apiclient/**": true
+	}
 }
