--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: 🔖 Release
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
       - main
 
 permissions: {}
+
 jobs:
   release:
     # prevents this action from running on forks
@@ -13,7 +14,9 @@ jobs:
     permissions:
       contents: write # to create release (changesets/action)
       pull-requests: write # to create pull request (changesets/action)
-    name: Release
+      packages: write # to publish to github packages (changesets/action)
+
+    name: 🔖 Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -26,6 +29,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@extensionly-gh'
           cache: pnpm
 
       - run: pnpm install --frozen-lockfile
@@ -36,13 +41,8 @@ jobs:
         with:
           # This expects you to have a script called release which does a build for your packages and calls changeset publish
           publish: pnpm release
+          commit: 'chore(release): 🔖 publish'
+          title: 'chore(release): 🔖 publish'
         env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          # UPDATE_TEMPLATE_SSH_KEY: ${{ secrets.UPDATE_TEMPLATE_SSH_KEY }}
-
-      # TODO alert discord
-      # - name: Send a Slack notification if a publish happens
-      #   if: steps.changesets.outputs.published == 'true'
-      #   # You can do something when a publish happens.
-      #   run: my-slack-bot send-notification --message "A new version of ${GITHUB_REPOSITORY} was published!"
