--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"prisma:studio": "doppler run -- prisma studio",
 		"prisma:push": "doppler run -- prisma db push",
 		"prisma:reset": "doppler run -- prisma db push --force-reset && prisma db seed",
-		"prisma:ci": "prisma db push && prisma db seed",
+		"prisma:ci": "prisma db push --force-reset && prisma db seed",
 		"prepare": "husky install && prisma generate && svelte-kit sync",
 		"generate-apis": "openapi-generator-cli generate",
 		"docker:rm": "docker-compose down",
